--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="./assets/css/font-awesome.css" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="logo">
+            <img src="./assets/img/logo.svg" alt="logo" />
+            <h1>EPICODE - IL BLOG DEI DEVELOPERS</h2>
+            <a href="#"><h2>⇒ HOME ⇐</h2></a>
+            <a href="#"><h2>⇒ ARTICOLI ⇐</h2></a>
+            <a href="#"><h2>⇒ LAVORA CON NOI ⇐</h2></a>
+        </div>
+        <div>
+            <h1>Come creare un template per i post</h1>
+            <h3><i class="fas fa-pen"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020</h3>
+            <p>la prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <span>parti comuni</span> da applicare a tutte le pagine</p>
+            <ul>
+                <caption>Le varie aree saranno quindi suddivise in:</caption>
+                <li>Contenuti di intestazione del tag</li>
+                <li>Contenuti centrali variabili del tag (corpo principale)</li>
+                <li>Contenuti di fine pagina comuni, da inserire nel tag</li>
+            </ul>
+        </div>
+        
+    </body>
 </html>
