--- a/index.html
+++ b/index.html
@@ -1,33 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./assets/css/reset.css" />
-        <link rel="stylesheet" href="./assets/css/font-awesome.css" />
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        <title>Document</title>
-    </head>
-    <body>
-        <div class="logo">
-            <img src="./assets/img/logo.svg" alt="logo" />
-            <h1>EPICODE - IL BLOG DEI DEVELOPERS</h2>
-            <a href="#"><h2>⇒ HOME ⇐</h2></a>
-            <a href="#"><h2>⇒ ARTICOLI ⇐</h2></a>
-            <a href="#"><h2>⇒ LAVORA CON NOI ⇐</h2></a>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/font-awesome.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="logo">
+        <img src="./assets/img/logo.svg" alt="logo" />
+        <h1>EPICODE - IL BLOG DEI DEVELOPERS</h2>
+            <a href="#">
+                <h2>⇒ HOME ⇐</h2>
+            </a>
+            <a href="#">
+                <h2>⇒ ARTICOLI ⇐</h2>
+            </a>
+            <a href="#">
+                <h2>⇒ LAVORA CON NOI ⇐</h2>
+            </a>
+    </div>
+    <div>
+        <h1>Come creare un template per i post</h1>
+        <h3><i class="fas fa-pen"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020</h3>
+        <p>la prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <span>parti comuni</span>
+            da applicare a tutte le pagine</p>
+        <ul>
+            <caption>Le varie aree saranno quindi suddivise in:</caption>
+            <li>Contenuti di intestazione del tag <span class="button">&#60;header&gt;</span></li>
+            <li>Contenuti centrali variabili del tag <span class="button">&#60;main&gt;</span>(corpo principale)</li>
+            <li>Contenuti di fine pagina comuni, da inserire nel <span class="button">&#60;footer&gt;</span></li>
+        </ul>
+        <p>Formattazione del codice <br> Il testo dell'articolo dovrà essere formattato per identificare tutte le parti
+            <span>selezionare con i CSS</span>. Perciò i passi saranno:</p>
+        <ol>
+            <li>Progettare su carta il markup finale, assegnando ad ogni specifico testo il tag appropriato</li>
+            <li>Scrivere l'HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+            <li>Applicare gli stili CSS</li>
+        </ol>
+        <p>Lapplicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale</p>
+        <table>
+            <caption class="italic">
+                Diffusione dei CSS
+            </caption>
+            <thead>
+                <tr>
+                    <th>Anno</th>
+                    <th>% di utilizzo</th>
+                    <th>Supporto browsers</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2000</td>
+                    <td>20%</td>
+                    <td>17%</td>
+                </tr>
+                <tr>
+                    <td>2002</td>
+                    <td>35%</td>
+                    <td>22%</td>
+                </tr>
+                <tr>
+                    <td>2004</td>
+                    <td>45%</td>
+                    <td>42%</td>
+                </tr>
+                <tr>
+                    <td>2008</td>
+                    <td>80%</td>
+                    <td>51%</td>
+                </tr>
+                <tr>
+                    <td>2012</td>
+                    <td>100%</td>
+                    <td>76%</td>
+                </tr>
+            </tbody>
+        </table>
+        <p>Un test di validazione potrà essere fatto tramite il <a href="#">tool online</a> dedicato allo scopo. Una
+            volta ottimizzato il tutto, avremo raggiunto il nostro obiettivoed essere stati dei veri developers come
+            loro:</p>
+        <div class="youtube"><iframe width="560" height="315" src="https://www.youtube.com/embed/MKEm5m8Pu_c"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe></div>
+        <div class="novita">
+            <h2>NOVIT&#192;</h2>
+            <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
+            <input type="mail" placeholder="inserisci l'email">
+            <div>Iscriviti!</div>
         </div>
-        <div>
-            <h1>Come creare un template per i post</h1>
-            <h3><i class="fas fa-pen"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25-10-2020</h3>
-            <p>la prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <span>parti comuni</span> da applicare a tutte le pagine</p>
-            <ul>
-                <caption>Le varie aree saranno quindi suddivise in:</caption>
-                <li>Contenuti di intestazione del tag</li>
-                <li>Contenuti centrali variabili del tag (corpo principale)</li>
-                <li>Contenuti di fine pagina comuni, da inserire nel tag</li>
-            </ul>
+        <h1 class="title2">ARTICOLI CORRELATI</h1>
+        <div class="correlati">
+            <a href="#">Validare il codice HTML</a>
+            <div><i class="fas fa-tag"></i> Categoria:develop</div>
+            <div class="data"><i class="fas fa-calendar-alt"></i>data: 18-9-2020</div>
         </div>
-        
-    </body>
+        <br>
+        <div class="correlati">
+            <a href="#">Validare il codice HTML</a>
+            <div><i class="fas fa-tag"></i> Categoria:develop</div>
+            <div class="data"><i class="fas fa-calendar-alt"></i>data: 18-9-2020</div>
+        </div>
+        <br>
+        <div class="correlati">
+            <a href="#">Validare il codice HTML</a>
+            <div><i class="fas fa-tag"></i> Categoria:develop</div>
+            <div class="data"><i class="fas fa-calendar-alt"></i>data: 18-9-2020</div>
+        </div>
+    </div>
+    <footer>
+        <p>blog epicode <i class="far fa-copyright"></i>2021</p>
+        <p><br><br>Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2- Milano. P.IVA 00112233. <span class="footer">info@epicode.school</span></p>
+    </footer>
+</body>
+
 </html>
